--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,17 @@ body{
   font-family: 'Poppins', sans-serif;
   margin: 0;
 }
+
+h1{
+  letter-spacing: 3px;
+}
+
+.poke_container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space-between;
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 1200px;
+  
+}
