Estilizado de la tarjeta Pokemon/Terminado

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,49 @@ h1{
   align-items: space-between;
   justify-content: center;
   margin: 0 auto;
-  max-width: 1200px;
-  
+  max-width: 1400px;
+}
+
+.pokemon-card{
+  background: #eee;
+  border-radius: 20px;
+  padding: 20px 50px;
+  margin: 10px;
+  text-align: center;
+  transition: 0.15s;
+}
+
+.pokemon-card:hover{
+  -webkit-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
+-moz-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
+box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
+}
+
+.pokemon-card .img-container{
+  background: rgba(255, 255, 255, 0.6);
+  border-radius: 50%;
+  margin-top: 20px;
+  width: 120px;
+  height: 120px;
+}
+
+.pokemon-card .img-container img{
+  margin-top: 10px;
+  max-width: 90%;
+}
+
+.pokemon-card .info{
+  margin-top: 20px;
+}
+
+.pokemon-card .number{
+  background-color: #fff;
+  border-radius: 10px;
+  font-size: 0.8rem;
+  padding: 5px 10px;
+}
+
+.pokemon-card .name{
+  margin: 15px 0 7px;
+  letter-spacing: 1px;
 }
