--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,7 @@ h1{
 }
 
 .pokemon-card:hover{
-  -webkit-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
--moz-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
-box-shadow: 5px 0px 5px 0px rgba(0,0,0,0.4);
+  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
 }
 
 .pokemon-card .img-container{
